public class Parking extends Prison{
    public Parking(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
