public class Start extends Prison{
    public Start(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
