public class Visit extends Prison{
    public Visit(int id, String label, int cost, int income) {
        super(id, label, cost, income);
    }
}
